# stravalyse

./: .gitignore  ClientInfo.txt  LICENSE  README.md  StravaHeatmap.py  analysis.py  config.toml  environment.yml  geo.py  here_xyz.py  pyproject.toml  requirements.txt  run.py  spec-file.txt  strava_activities.py  strava_analysis_tool.py  strava_auth.py  strava_data.py  stravalyse.code-workspace  stravalyse.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md
API/swagger_client/: api_client.py  configuration.py
API/swagger_client/api/: activities_api.py  streams_api.py
API/swagger_client/models/: detailed_segment.py  explorer_segment.py  summary_segment.py
stravalyse/: analysis.py  geo.py  mapbox_upload.py  strava_auth.py  strava_data.py  stravalyse.py
